--- a/projects/templates/list_projects.html
+++ b/projects/templates/list_projects.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Projects{% endblock title %}
+{% block title %}Login{% endblock title %}
 {% block content %}
 {% load static %}
 
