--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
-{% block title %}Login{% endblock title %}
+{% block title %}Signup{% endblock title %}
 {% block content %}
 {% load static %}
 
 <div>
-    <h1>Login</h1>
+    <h1>Signup</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button>Login</button>
+        <button>Signup</button>
     </form>
 </div>
 
