--- a/projects/templates/list_projects.html
+++ b/projects/templates/list_projects.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Login{% endblock title %}
+{% block title %}My Projects{% endblock title %}
 {% block content %}
 {% load static %}
 
@@ -9,7 +9,7 @@
     <table>
         <tr><th>Name</th><th>Number of tasks</th></tr>
         {% for project in list_projects %}
-        <tr><td>{{ project.name }}</td><td></td></tr>
+        <tr><td><a href="{% url 'show_project' project.id %}">{{ project.name }}</a></td><td>{{ project.tasks.all|length }}</td></tr>
         {% endfor %}
         </table>
     {% else %}
