--- a/projects/templates/list_projects.html
+++ b/projects/templates/list_projects.html
@@ -5,6 +5,9 @@
 
 <div>
     <h1>My Projects</h1>
+    <div>
+        <p><a href="{% url 'create_project' %}">Create a new project</a></p>
+    </div>
     {% if list_projects %}
     <table>
         <tr><th>Name</th><th>Number of tasks</th></tr>
