--- a/projects/templates/project_details.html
+++ b/projects/templates/project_details.html
@@ -8,6 +8,9 @@
     <h1>{{ show_project.name }}</h1>
         <p>{{ show_project.description }}</p>
     <h2>Tasks</h2>
+        <div>
+            <p><a href="{% url 'create_task' %}">Create a new task</a></p>
+        </div>
         <table>
             <tr><th>Name</th><th>Assignee</th><th>Start date</th><th>Due date</th><th>Is completed</th></tr>
             {% for task in tasks %}
