--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,15 +1,17 @@
 {% extends 'base.html' %}
-{% block title %}Login{% endblock title %}
+
+{% block title %}
+    Login
+{% endblock title %}
 {% block content %}
-{% load static %}
+    {% load static %}
 
-<div>
-    <h1>Login</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button>Login</button>
-    </form>
-</div>
-
+    <div>
+        <h1>Login</h1>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button>Login</button>
+        </form>
+    </div>
 {% endblock content %}
