--- a/projects/templates/list_projects.html
+++ b/projects/templates/list_projects.html
@@ -1,23 +1,35 @@
 {% extends 'base.html' %}
-{% block title %}My Projects{% endblock title %}
+
+{% block title %}
+    My Projects
+{% endblock title %}
 {% block content %}
-{% load static %}
+    {% load static %}
 
-<div>
-    <h1>My Projects</h1>
     <div>
-        <p><a href="{% url 'create_project' %}">Create a new project</a></p>
+        <h1>My Projects</h1>
+        <div>
+            <p>
+                <a href="{% url 'create_project' %}">Create a new project</a>
+            </p>
+        </div>
+        {% if list_projects %}
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Number of tasks</th>
+                </tr>
+                {% for project in list_projects %}
+                    <tr>
+                        <td>
+                            <a href="{% url 'show_project' project.id %}">{{ project.name }}</a>
+                        </td>
+                        <td>{{ project.tasks.all|length }}</td>
+                    </tr>
+                {% endfor %}
+            </table>
+        {% else %}
+            <p>You are not assigned to any projects</p>
+        {% endif %}
     </div>
-    {% if list_projects %}
-    <table>
-        <tr><th>Name</th><th>Number of tasks</th></tr>
-        {% for project in list_projects %}
-        <tr><td><a href="{% url 'show_project' project.id %}">{{ project.name }}</a></td><td>{{ project.tasks.all|length }}</td></tr>
-        {% endfor %}
-        </table>
-    {% else %}
-        <p>You are not assigned to any projects</p>
-    {% endif %}
-</div>
-
 {% endblock content %}
